@startuml
interface nsysu.bank.account.CanWithdraw {
~ boolean withdraw(double)
~ void handleWithdraw(String,double)
}

abstract class nsysu.bank.account.InterestAccount {
# Date date
# double rate
+ double getRate()
# {abstract}void updateBalanceWithInterest()
+ void refresh()
}


abstract class nsysu.bank.account.BasicAccount {
- String accountId
- String type
# double balance
# String status
# List<HistoryRecord> history
+ {static} BasicAccount loadAccount(String)
+ String getId()
+ double getBalance()
+ String getType()
+ String getStatus()
+ List<HistoryRecord> getHistory()
# void updateBalance(double)
+ void refresh()
+ boolean transfer(String,double,String)
+ String toString()
}


interface nsysu.bank.account.CanTransferOut {
+ boolean transferOut(String,double,String)
}

class nsysu.bank.account.ForeignAccount {
# void updateBalanceWithInterest()
+ boolean withdraw(double)
}

class nsysu.bank.account.SavingAccount {
# void updateBalanceWithInterest()
+ boolean transferOut(String,double,String)
+ boolean withdraw(double)
}

class nsysu.bank.account.CheckingAccount {
+ boolean transferOut(String,double,String)
+ boolean withdraw(double)
}

class nsysu.bank.account.TimeDeposit {
# void updateBalanceWithInterest()
}



nsysu.bank.account.BasicAccount <|-- nsysu.bank.account.InterestAccount
nsysu.bank.account.CanWithdraw <|.. nsysu.bank.account.ForeignAccount
nsysu.bank.account.InterestAccount <|-- nsysu.bank.account.ForeignAccount
nsysu.bank.account.CanTransferOut <|.. nsysu.bank.account.SavingAccount
nsysu.bank.account.CanWithdraw <|.. nsysu.bank.account.SavingAccount
nsysu.bank.account.InterestAccount <|-- nsysu.bank.account.SavingAccount
nsysu.bank.account.CanWithdraw <|.. nsysu.bank.account.CheckingAccount
nsysu.bank.account.CanTransferOut <|.. nsysu.bank.account.CheckingAccount
nsysu.bank.account.BasicAccount <|-- nsysu.bank.account.CheckingAccount
nsysu.bank.account.InterestAccount <|-- nsysu.bank.account.TimeDeposit
@enduml